--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -1,39 +1,74 @@
-Professor Alex's Internet Page
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mengyun Liu</title>
+  </head>
+  <body>
+    <h1>Mengyun Liu</h1>
+    <p>Here is Mengyun's first lab</p>
 
-First, the basics.
+    <h2>The Basics</h2>
+    <p>Headings set your default page size</p>
+  
+    <p>JPGs</p>
+    
+    <img src='images/mochi.jpg'/>
+   
+   <p>GIFs</p>
+   
+   <img src='images/mochi.gif'/>
+   
+   
+   <p>PNGs</p>
+   
+   <img src='images/mochi.png'/>
+   
+   <p>SVGs</p>
+   
+   <img src='images/mochi.svg'/>
+   <!-- In JPGs section -->
+   <img src='images/mochi.jpg' width='75' alt='A mochi ball in a bubble'/>
+   
+   <!-- In GIFs section -->
+   <img src='images/mochi.gif' width='75' alt='A dancing mochi ball'/>
+   
+   <!-- In PNGs section -->
+   <img src='images/mochi.png' width='75' alt='A mochi ball'/>
+   
+   <!-- In SVGs section -->
+   <img src='images/mochi.svg' alt='A mochi ball with Bézier handles'/>
+   </html>
+   
+  </body>
+  <h2>Lists</h2>
 
-Alex Heading 1
+<p>This is an unordered list:</p>
 
-Headings set your default page size
+<ul>
+  <li>HTML/CSS underpins most user interfaces now</li>
+  <li>CSS tries something so hard no other computer language even bothers</li>
+  <li>Javascript got popular from having a runtime in every browser in the world</li>
+</ul>
+<p>This is an ordered list:</p>
 
-Add your four mochi images from your tutorial here. 
+<ol>
+  <li>Parachutes(Coldplay) #1</li>
+  <li>DAMN.(Kendrick Lamar) #2</li>
+  <li>Fearless(Taylor Swift) #3</li>
+  <li>A Head Full of Dreams(Coldplay) #4</li>
+  <li>Ghost Stories(Coldplay) #5</li>
+</ol>
+<h2>Inline Elements</h2>
 
-Lists
+<p>Sometimes you want to <em>draw attention</em> to something in a line of text.</p>
+<p>Sometimes you want to <strong>strongly emphasize</strong> something in the text.</p>
+    <p><em><strong>Sometimes you want to do both.</strong></em></p>
+    <h2>Empty Elements</h2>
+    <p>Soft line breaks can's wrap anything.<br/>
+    Neither can image tags, or hard lines</p>
+    <p>Here,<br/>
+is also a hard line break.</p>    
+<hr/>
 
-Let's make an unordered list.
-
-Add an unordered list element
-nest each item inside the unordered list in a list tag
-List elements can be in any order
-
-And now, one in order.
-
-Add an ordered list element.
-Add your top five music albums in order to the list.
-Check it out, numbers by default.
-
-Inline elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-
-Add a hard line under here.
-
-This page probably doesn't look great - we'll learn how to hook it to CSS next week.
+<p>P.S. This page might look like crap, but we'll learn how to hook it to CSS next week.</p>
+</html>
