--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -2,3 +2,28 @@
 <!-- Include your stylesheet in the head -->
 <!-- Include your script.js right before the </body> tag -->
 <!-- Make a carousel of four mochi images that cycle, based on the readings from javascript.info -->
+<!DOCTYPE html>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="carousel">
+    <div id="con">
+        <div id="left">&lt</div>
+        
+            <ul>
+        <img src="images/onigiri_1.png">
+        <img src="images/onigiri_2.png">
+        <img src="images/onigiri_3.png">
+        <img src="images/onigiri_4.png">
+    </ul>
+</div>
+<div id="right">&gt</div>
+
+</div>
+<script src="script.js"></script>
+</body>
+</html>
