--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -8,52 +8,52 @@
   
   <body>
       <h1>Mengyun Liu's Lab 4</h1>
-      <div class="main">
-        <form method="POST" action="/api">
+      <header class='main'>
+        <form action="/api" method="POST" >
         <ul class="flex-outer">
           <li>
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name">
+            <input type="text" id="first-name" name="first-name">
           </li>
           <li>
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name">
+            <input type="text" id="last-name" name="last-name">
           </li>
           <li>
             <label for="email">Email</label>
-            <input type="email" id="email">
+            <input type="email" id="email" name="email">
           </li>
           <li>
             <label for="phone">Phone</label>
-            <input type="tel" id="phone">
+            <input type="tel" id="phone" name="phone">
           </li>
           <li>
             <label for="message">Text field</label>
-            <textarea rows="6" id="message" placeholder="This is some default message text."></textarea>
+            <textarea rows="5" cols="33" id="message" name="message" placeholder="This is some default message text."></textarea>
           </li>
           <li>
             <p>Age</p>
             <ul class="flex-inner">
                 <li>
-                    <input type="checkbox" id="eighteen-to-thirtyfive">
+                    <input type="checkbox" id="eighteen-to-thirtyfive" name="eighteen-to-thirtyfive">
                     <label for="eighteen-to-thirtyfive">18-35</label>
                   </li>
                   <li>
-                    <input type="checkbox" id="thirtyfive-to-fifty">
+                    <input type="checkbox" id="thirtyfive-to-fifty" name="thirtyfive-to-fifty">
                     <label for="thirtyfive-to-fifty">35-50</label>
                   </li>
                   <li>
-                    <input type="checkbox" id="fifty-to-sixtyfive">
+                    <input type="checkbox" id="fifty-to-sixtyfive" name="fifty-to-sixtyfive">
                     <label for="fifty-to-sixtyfive">50-65</label>
                   </li>
             </ul>
           </li>
           <li>
-            <button type="submit">SUBMIT FORM</button>
+            <button type="submit" id="submit" name="submit">SUBMIT FORM</button>
           </li>
         </ul>
       </form>
 
-    </div>
+    </header>
   </body>
 </html>
