--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -8,16 +8,16 @@
   
   <body>
       <h1>Mengyun Liu's Lab 4</h1>
-      <header class='main'>
-        <form action="/api" method="POST" >
+      <div class='main'>
+        <form method="POST" action="/api">
         <ul class="flex-outer">
           <li>
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first-name">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="fname">
           </li>
           <li>
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last-name">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lname">
           </li>
           <li>
             <label for="email">Email</label>
@@ -54,6 +54,6 @@
         </ul>
       </form>
 
-    </header>
+      </div>
   </body>
 </html>
