--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>Mengyun Liu's Lab 4</h1>
       <div class='main'>
-        <form method="POST" action="/api">
+        <form method="post" action="/api">
         <ul class="flex-outer">
           <li>
             <label for="fname">First Name</label>
