--- a/public/labs/lab_5/index.html
+++ b/public/labs/lab_5/index.html
@@ -24,7 +24,7 @@
                   <div class="subtitle">Zip Code Food Search</div>
                       <form action = "" id="search-form" >
                           <label for="search"></label>
-                        <input type="text" id="search" name="search">
+                        <input type="text" id="search" name="search" placeholder="Search Zip Code">
                         <button type="submit">Submit</button>
                     </form>
                           <ul class="target-list">
