--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -10,20 +10,18 @@
 </head>
 
 <body>
-    <div class="carousel">
-    <div id="con">
-        <div id="left">&lt</div>
-        
+    <div class = "carousel">
+        <button class= "arrow left">⇦</button>
+        <div class = "gallery">
             <ul>
         <img src="images/onigiri_1.png">
         <img src="images/onigiri_2.png">
         <img src="images/onigiri_3.png">
         <img src="images/onigiri_4.png">
-    </ul>
+</ul>
 </div>
-<div id="right">&gt</div>
-
-</div>
+<button class= "arrow right">⇨</button>
+</div>   
 <script src="script.js"></script>
 </body>
 </html>
